<refactor> updated NAV with Logo & links, Root: primary, services cards

--- a/css/critical.less
+++ b/css/critical.less
@@ -81,7 +81,7 @@
                 display: block;
                 height: 4/64em;
                 width: 97/64em;
-                background: var(--primary);
+                background: var(--navText);
                 opacity: 1;
                 bottom: -16/64em;
                 left: 50%;
@@ -131,7 +131,7 @@
     #hero {
         padding-top: 273/16em;
         padding-bottom: 307/16em;
-        background: url("../images/landing.jpg");
+        background: url("../images/tim-mossholder-q49oU8NeOHQ-unsplash.jpg");
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
@@ -183,6 +183,7 @@
                 margin: auto;
                 margin-bottom: 23/16em;
                 border-radius: 50%;
+                
 
                 img {
                     width: 48/16em;
