--- a/css/critical.css
+++ b/css/critical.css
@@ -36,8 +36,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   #hero .hero-content {
     width: 96%;
@@ -73,12 +72,11 @@
     display: block;
     height: 0.0625em;
     width: 1.515625em;
-    background: var(--primary);
+    background: var(--navText);
     opacity: 1;
     bottom: -0.25em;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
   }
   #hero p {
     line-height: 1.55em;
@@ -104,12 +102,8 @@
     overflow: hidden;
   }
   #hero .hero-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
     position: relative;
   }
 }
@@ -118,7 +112,7 @@
   #hero {
     padding-top: 17.0625em;
     padding-bottom: 19.1875em;
-    background: url("../images/landing.jpg");
+    background: url("../images/tim-mossholder-q49oU8NeOHQ-unsplash.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -144,8 +138,7 @@
     max-width: 82.5em;
     padding: 3.125em 1.25em;
     border-top: 0.375em solid var(--primary);
-    -webkit-box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-            box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
     margin-bottom: 3.125em;
   }
   .services .card {
@@ -162,15 +155,9 @@
     background: var(--primary);
     width: 5.5em;
     height: 5.5em;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: auto;
     margin-bottom: 1.4375em;
     border-radius: 50%;
@@ -198,15 +185,9 @@
 @media only screen and (min-width: 768px) {
   .services {
     font-size: min(1.8vw, 1em);
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    justify-content: space-between;
+    align-items: flex-start;
     width: 98%;
   }
   .services .card {
