--- a/css/root.css
+++ b/css/root.css
@@ -4,10 +4,11 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   :root {
-    --primary: #FFBA19;
+    --primary: #f01e1e;
     --primaryShade: #ffd675;
     --primaryDark: #805d0d;
     --bodyText: #1a1a1a;
+    --navText: #d62a2a;
   }
   /* roboto-regular - latin */
   @font-face {
@@ -50,11 +51,9 @@
   *:after {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
   body {
-    -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s;
   }
   .container {
@@ -101,10 +100,8 @@
     z-index: 1;
     background-color: var(--primary);
     color: #000;
-    -webkit-transition: color .3s;
     transition: color .3s;
-    -webkit-transition-delay: .1s;
-            transition-delay: .1s;
+    transition-delay: .1s;
   }
   .button-solid:hover {
     color: #fff;
@@ -123,7 +120,6 @@
     z-index: -1;
     background-color: #000;
     width: 0;
-    -webkit-transition: width .3s;
     transition: width .3s;
   }
   .skip {
@@ -169,17 +165,21 @@
     background-color: #fff;
     width: 100%;
     height: 100%;
-    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   #navigation .container {
     padding: 0.8125em 0;
     width: 96%;
   }
   #navigation .logo {
-    display: inline-block;
     height: 1.875em;
     width: auto;
+    text-decoration: none;
+    color: var(--navText);
+    font-weight: bold;
+    font-size: larger;
+    align-content: center;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.404);
   }
   #navigation .logo img {
     width: auto;
@@ -202,9 +202,7 @@
     background: transparent;
     padding: 0;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    -webkit-transition: top .3s;
+    transform: translateY(-50%);
     transition: top .3s;
   }
   #navigation .hamburger-menu span {
@@ -214,9 +212,7 @@
     display: block;
     position: absolute;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    -webkit-transition: background-color 0.3s;
+    transform: translateX(-50%);
     transition: background-color 0.3s;
   }
   #navigation .hamburger-menu span:before {
@@ -229,10 +225,7 @@
     opacity: 1;
     top: -6px;
     left: 0;
-    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
-    transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
     transition: width .3s, left .3s, top .3s, transform .5s;
-    transition: width .3s, left .3s, top .3s, transform .5s, -webkit-transform .5s;
   }
   #navigation .hamburger-menu span:after {
     content: '';
@@ -244,25 +237,20 @@
     opacity: 1;
     top: 6px;
     left: 0;
-    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
-    transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
     transition: width .3s, left .3s, top .3s, transform .3s;
-    transition: width .3s, left .3s, top .3s, transform .3s, -webkit-transform .3s;
   }
   #navigation .hamburger-menu.clicked span {
     background-color: transparent;
   }
   #navigation .hamburger-menu.clicked span:before {
     width: 100%;
-    -webkit-transform: translate(-50%, -50%) rotate(225deg);
-            transform: translate(-50%, -50%) rotate(225deg);
+    transform: translate(-50%, -50%) rotate(225deg);
     left: 50%;
     top: 50%;
   }
   #navigation .hamburger-menu.clicked span:after {
     width: 100%;
-    -webkit-transform: translate(-50%, -50%) rotate(-225deg);
-            transform: translate(-50%, -50%) rotate(-225deg);
+    transform: translate(-50%, -50%) rotate(-225deg);
     left: 50%;
     top: 50%;
   }
@@ -274,53 +262,40 @@
     border-radius: 0 0 0.375em 0.375em;
     z-index: -1;
     overflow: hidden;
-    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
     top: 4em;
     padding-top: 0;
     height: 0;
-    -webkit-transition: height 0.3s, padding-top 0.3s, top 0.3s;
     transition: height 0.3s, padding-top 0.3s, top 0.3s;
   }
   #navigation #navbar-menu ul {
     padding: 0;
-    -webkit-perspective: 700px;
-            perspective: 700px;
+    perspective: 700px;
   }
   #navigation #navbar-menu ul li {
     list-style: none;
     margin-bottom: 1.5em;
     text-align: center;
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
+    transform-style: preserve-3d;
     opacity: 0;
-    -webkit-transform: translateY(-0.4375em) rotateX(90deg);
-            transform: translateY(-0.4375em) rotateX(90deg);
-    -webkit-transition: opacity .5s, -webkit-transform .5s;
-    transition: opacity .5s, -webkit-transform .5s;
+    transform: translateY(-0.4375em) rotateX(90deg);
     transition: opacity .5s, transform .5s;
-    transition: opacity .5s, transform .5s, -webkit-transform .5s;
   }
   #navigation #navbar-menu ul li:nth-of-type(1) {
-    -webkit-transition-delay: .1s;
-            transition-delay: .1s;
+    transition-delay: .1s;
   }
   #navigation #navbar-menu ul li:nth-of-type(2) {
-    -webkit-transition-delay: .2s;
-            transition-delay: .2s;
+    transition-delay: .2s;
   }
   #navigation #navbar-menu ul li:nth-of-type(3) {
-    -webkit-transition-delay: .3s;
-            transition-delay: .3s;
+    transition-delay: .3s;
   }
   #navigation #navbar-menu ul li:nth-of-type(4) {
-    -webkit-transition-delay: .4s;
-            transition-delay: .4s;
+    transition-delay: .4s;
   }
   #navigation #navbar-menu ul li:nth-of-type(5) {
-    -webkit-transition-delay: .5s;
-            transition-delay: .5s;
+    transition-delay: .5s;
   }
   #navigation #navbar-menu ul li a {
     text-decoration: none;
@@ -352,8 +327,7 @@
   }
   #navigation #navbar-menu.open ul li {
     opacity: 1;
-    -webkit-transform: translateY(0) rotateX(0);
-            transform: translateY(0) rotateX(0);
+    transform: translateY(0) rotateX(0);
   }
 }
 /* Desktop */
@@ -375,8 +349,7 @@
   }
   body.scroll #navigation .background-color-div {
     height: 100%;
-    -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   body.scroll #navigation .logo .light {
     display: none;
@@ -392,8 +365,7 @@
   }
   body.dark-mode #navigation .background-color-div {
     height: 100%;
-    -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   #navigation {
     width: 100%;
@@ -403,12 +375,8 @@
     left: 0;
     z-index: 200000;
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   #navigation .background-color-div {
     position: absolute;
@@ -417,25 +385,24 @@
     width: 100%;
     background-color: #fff;
     height: 0;
-    -webkit-transition: height .3s;
     transition: height .3s;
   }
   #navigation .container {
     max-width: 75em;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-end;
+    align-items: center;
   }
   #navigation .logo {
     margin-right: auto;
     height: 3.75em;
     width: auto;
+    text-decoration: none;
+    color: var(--navText);
+    font-weight: bold;
+    font-size: larger;
+    align-content: center;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.404);
   }
   #navigation .logo img {
     width: auto;
@@ -443,15 +410,9 @@
   }
   #navigation #navbar-menu ul {
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-end;
+    align-items: center;
   }
   #navigation #navbar-menu ul li {
     list-style: none;
@@ -466,7 +427,6 @@
     position: relative;
     z-index: 1;
     color: #fff;
-    -webkit-transition: color .3s;
     transition: color .3s;
   }
   #navigation #navbar-menu ul li a:before {
@@ -481,7 +441,6 @@
     z-index: -1;
     left: 0;
     width: 0%;
-    -webkit-transition: width .3s;
     transition: width .3s;
   }
   #navigation #navbar-menu ul li a:hover:before {
@@ -500,66 +459,10 @@
     left: 0em;
     right: -0.31578947em;
     z-index: -1;
-    -webkit-transition: bottom .3s;
     transition: bottom .3s;
   }
   #navigation .hamburger-menu {
     display: none;
-  }
-}
-/* Dark Mode Mobile */
-@media only screen and (max-width: 1023px) {
-  body.dark-mode #navigation .background-color-div {
-    background-color: var(--dark);
-  }
-  body.dark-mode #navigation .hamburger-menu.clicked span {
-    background-color: var(--dark);
-  }
-  body.dark-mode #navigation .hamburger-menu span {
-    background-color: #fff;
-  }
-  body.dark-mode #navigation .hamburger-menu span:before,
-  body.dark-mode #navigation .hamburger-menu span:after {
-    background-color: #fff;
-  }
-  body.dark-mode #navigation .logo .light {
-    display: block;
-  }
-  body.dark-mode #navigation .logo .dark {
-    display: none !important;
-  }
-  body.dark-mode #navigation #navbar-menu {
-    background-color: var(--medium);
-  }
-  body.dark-mode #navigation #navbar-menu ul li a {
-    color: #fff;
-  }
-  body.dark-mode #navigation #navbar-menu ul li a:before {
-    background: var(--accent);
-  }
-  body.dark-mode #navigation #navbar-menu ul li a.active {
-    color: var(--primary);
-  }
-}
-/* Dark Mode Desktop */
-@media only screen and (min-width: 1024px) {
-  body.dark-mode #navigation .background-color-div {
-    background-color: var(--dark);
-  }
-  body.dark-mode #navigation .logo .light {
-    display: block;
-  }
-  body.dark-mode #navigation .logo .dark {
-    display: none !important;
-  }
-  body.dark-mode #navigation #navbar-menu ul li a {
-    color: #fff;
-  }
-  body.dark-mode #navigation #navbar-menu ul li a:before {
-    background: var(--accent);
-  }
-  body.dark-mode #navigation #navbar-menu ul li a.active {
-    color: var(--primary);
   }
 }
 /*-- -------------------------- -->
@@ -568,19 +471,10 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   #int-hero {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     position: relative;
     z-index: 1;
     min-height: 30vh;
@@ -612,8 +506,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   #int-hero h1 {
     color: #fff;
@@ -651,8 +544,7 @@
     min-height: 18.75em;
     height: auto;
     padding-top: 11.25em;
-    -webkit-padding-after: 6.25em;
-            padding-block-end: 6.25em;
+    padding-block-end: 6.25em;
     background-attachment: fixed;
     font-size: inherit;
   }
@@ -701,14 +593,9 @@
     margin: auto;
   }
   #footer .right-section .lists {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 96%;
     max-width: 19.1875em;
     margin: auto;
@@ -722,15 +609,9 @@
     margin-top: 3.125em;
   }
   #footer .right-section .lists ul:nth-of-type(3) li {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-start;
+    align-items: center;
     margin-bottom: 0.88888889em;
   }
   #footer .right-section .lists ul:nth-of-type(3) li:last-of-type {
@@ -747,7 +628,6 @@
     text-decoration: none;
     color: #fff;
     line-height: 1.16666667;
-    -webkit-transition: color .3s;
     transition: color .3s;
   }
   #footer .right-section .lists ul li a:hover {
@@ -774,12 +654,8 @@
     left: 0;
   }
   #footer .right-section .buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
   #footer .right-section .button-solid {
     margin: 0;
@@ -815,18 +691,10 @@
     font-size: min(1.2vw, 1em);
   }
   #footer .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     width: 96%;
     max-width: 82.5em;
     margin: auto;
@@ -876,16 +744,13 @@
     opacity: 1;
     bottom: -0.16666667em;
     left: 0;
-    -webkit-transition: width .3s;
     transition: width .3s;
   }
   #footer .right-section .lists ul li a:hover:before {
     width: 100%;
   }
   #footer .right-section .buttons {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    justify-content: flex-start;
   }
   #footer .credit .copyright {
     display: inline-block;
