<update> Index.html finished, move to contact

--- a/css/root.css
+++ b/css/root.css
@@ -648,7 +648,7 @@
     display: block;
     height: 0.11111111em;
     width: 5.38888889em;
-    background: #EEBE76;
+    background: var(--navText);
     opacity: 1;
     bottom: -0.88888889em;
     left: 0;
