--- a/css/root.less
+++ b/css/root.less
@@ -799,7 +799,7 @@
 							display: block;
 							height: 2/18em;
 							width: 97/18em;
-							background: #EEBE76;
+							background: var(--navText);
 							opacity: 1;
 							bottom: -16/18em;
 							left: 0;
