--- a/css/contact.css
+++ b/css/contact.css
@@ -80,9 +80,12 @@
     background: #1a1a1a;
     padding: 2.8125em 2.125em;
     width: 100%;
-    max-width: 18.75em;
+    max-width: fit-content;
     margin: auto;
     border-radius: 0.3125em;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
   #form .contact-right .heading {
     color: #fff;
@@ -117,8 +120,6 @@
   #form .contact-right {
     max-width: 43.75em;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
   }
   #form .contact-right .info-group {
     width: 40%;
@@ -220,6 +221,7 @@
   #form .contact-right .info-group {
     margin-left: 0;
     width: 100%;
+    flex-direction: column;
   }
   #form .contact-right .info-group:nth-of-type(3),
   #form .contact-right .info-group:last-of-type {
