<update> Updated review card picture with flex

--- a/css/reviews.css
+++ b/css/reviews.css
@@ -45,7 +45,7 @@
     text-align: left;
   }
   #reviews .review .star-group {
-    border-top: 1px solid #E7E7E7;
+    border-top: 1px solid #e7e7e7;
     padding-top: 1em;
     display: flex;
     justify-content: space-between;
@@ -54,7 +54,7 @@
     margin-top: auto;
   }
   #reviews .review .star-group .name {
-    color: #1A1A1A;
+    color: #1a1a1a;
     line-height: 1.33333333em;
     text-align: left;
     font-weight: bold;
@@ -65,10 +65,13 @@
     font-weight: 400;
     display: block;
   }
+  #reviews .review .star-group picture {
+    display: flex;
+  }
   #reviews .review .star-group img {
     display: block;
-    width: 5.6875em;
-    height: 0.9375em;
+    width: 1.875em;
+    height: 1.875em;
     margin: 0;
   }
 }
@@ -104,7 +107,7 @@
   }
   body.dark-mode #reviews .review .desc {
     color: #fff;
-    opacity: .7;
+    opacity: 0.7;
   }
 }
 /*-- -------------------------- -->
@@ -117,13 +120,13 @@
     padding: 3.125em 0;
   }
   #cta:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 100%;
     width: 100%;
     background: #000;
-    opacity: .7;
+    opacity: 0.7;
     top: 0;
     left: 0;
     z-index: -1;
@@ -182,7 +185,7 @@
     display: none;
   }
   #cta:after {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 69.25em;
@@ -207,13 +210,13 @@
     transform: translateX(-50%);
   }
   #cta picture:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 100%;
     width: 100%;
     background: #000;
-    opacity: .7;
+    opacity: 0.7;
     top: 0;
     left: 0;
     z-index: 1;
