<style> root.less, #nav-bar menu top: updated 54/16em

--- a/css/root.css
+++ b/css/root.css
@@ -12,28 +12,28 @@
   }
   /* roboto-regular - latin */
   @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
-    src: local(''), url('../fonts/roboto-v29-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-regular.woff') format('woff');
+    src: local(""), url("../fonts/roboto-v29-latin-regular.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/roboto-v29-latin-regular.woff") format("woff");
     
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   /* roboto-700 - latin */
   @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
-    src: local(''), url('../fonts/roboto-v29-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-700.woff') format('woff');
+    src: local(""), url("../fonts/roboto-v29-latin-700.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/roboto-v29-latin-700.woff") format("woff");
     
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   /* roboto-900 - latin */
   @font-face {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    src: local(''), url('../fonts/roboto-v29-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-900.woff') format('woff');
+    src: local(""), url("../fonts/roboto-v29-latin-900.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/roboto-v29-latin-900.woff") format("woff");
     
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
@@ -42,7 +42,7 @@
     margin: 0;
     padding: 0;
     font-size: 100%;
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
     color: var(--bodyText);
     overflow-x: hidden;
   }
@@ -100,8 +100,8 @@
     z-index: 1;
     background-color: var(--primary);
     color: #000;
-    transition: color .3s;
-    transition-delay: .1s;
+    transition: color 0.3s;
+    transition-delay: 0.1s;
   }
   .button-solid:hover {
     color: #fff;
@@ -110,7 +110,7 @@
     width: 100%;
   }
   .button-solid:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 100%;
@@ -120,7 +120,7 @@
     z-index: -1;
     background-color: #000;
     width: 0;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   .skip {
     position: absolute;
@@ -142,7 +142,7 @@
 @media only screen and (min-width: 2000px) {
   body,
   html {
-    font-size: .85vw;
+    font-size: 0.85vw;
   }
 }
 /*-- -------------------------- -->
@@ -203,7 +203,7 @@
     padding: 0;
     top: 50%;
     transform: translateY(-50%);
-    transition: top .3s;
+    transition: top 0.3s;
   }
   #navigation .hamburger-menu span {
     height: 2px;
@@ -216,7 +216,7 @@
     transition: background-color 0.3s;
   }
   #navigation .hamburger-menu span:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 2px;
@@ -225,10 +225,10 @@
     opacity: 1;
     top: -6px;
     left: 0;
-    transition: width .3s, left .3s, top .3s, transform .5s;
+    transition: width 0.3s, left 0.3s, top 0.3s, transform 0.5s;
   }
   #navigation .hamburger-menu span:after {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 2px;
@@ -237,7 +237,7 @@
     opacity: 1;
     top: 6px;
     left: 0;
-    transition: width .3s, left .3s, top .3s, transform .3s;
+    transition: width 0.3s, left 0.3s, top 0.3s, transform 0.3s;
   }
   #navigation .hamburger-menu.clicked span {
     background-color: transparent;
@@ -264,7 +264,7 @@
     overflow: hidden;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
-    top: 4em;
+    top: 3.375em;
     padding-top: 0;
     height: 0;
     transition: height 0.3s, padding-top 0.3s, top 0.3s;
@@ -280,22 +280,22 @@
     transform-style: preserve-3d;
     opacity: 0;
     transform: translateY(-0.4375em) rotateX(90deg);
-    transition: opacity .5s, transform .5s;
+    transition: opacity 0.5s, transform 0.5s;
   }
   #navigation #navbar-menu ul li:nth-of-type(1) {
-    transition-delay: .1s;
+    transition-delay: 0.1s;
   }
   #navigation #navbar-menu ul li:nth-of-type(2) {
-    transition-delay: .2s;
+    transition-delay: 0.2s;
   }
   #navigation #navbar-menu ul li:nth-of-type(3) {
-    transition-delay: .3s;
+    transition-delay: 0.3s;
   }
   #navigation #navbar-menu ul li:nth-of-type(4) {
-    transition-delay: .4s;
+    transition-delay: 0.4s;
   }
   #navigation #navbar-menu ul li:nth-of-type(5) {
-    transition-delay: .5s;
+    transition-delay: 0.5s;
   }
   #navigation #navbar-menu ul li a {
     text-decoration: none;
@@ -308,7 +308,7 @@
     font-weight: bold;
   }
   #navigation #navbar-menu ul li a.active:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 0.42105263em;
@@ -322,7 +322,7 @@
   }
   #navigation #navbar-menu.open {
     height: 19.125em;
-    padding-top: 1.25em;
+    padding-top: 1.5em;
     z-index: -100;
   }
   #navigation #navbar-menu.open ul li {
@@ -341,7 +341,7 @@
   }
   ::-webkit-scrollbar {
     width: 0.75em;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
   }
   ::-webkit-scrollbar-thumb {
     border-radius: 0.625em;
@@ -385,7 +385,7 @@
     width: 100%;
     background-color: #fff;
     height: 0;
-    transition: height .3s;
+    transition: height 0.3s;
   }
   #navigation .container {
     max-width: 75em;
@@ -427,10 +427,10 @@
     position: relative;
     z-index: 1;
     color: #fff;
-    transition: color .3s;
+    transition: color 0.3s;
   }
   #navigation #navbar-menu ul li a:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 0.31578947em;
@@ -441,13 +441,13 @@
     z-index: -1;
     left: 0;
     width: 0%;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   #navigation #navbar-menu ul li a:hover:before {
     width: 100%;
   }
   #navigation #navbar-menu ul li a.active:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     width: 100%;
@@ -459,7 +459,7 @@
     left: 0em;
     right: -0.31578947em;
     z-index: -1;
-    transition: bottom .3s;
+    transition: bottom 0.3s;
   }
   #navigation .hamburger-menu {
     display: none;
@@ -481,13 +481,13 @@
     padding-top: 3.125em;
   }
   #int-hero:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 100%;
     width: 100%;
     background: #000;
-    opacity: .7;
+    opacity: 0.7;
     top: 0;
     left: 0;
     z-index: -1;
@@ -555,7 +555,7 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   #footer {
-    background: #1C1C1C;
+    background: #1c1c1c;
     padding: 5.25em 0 1.25em;
     font-size: min(4vw, 1.2em);
   }
@@ -581,7 +581,7 @@
     font-size: 0.875em;
     line-height: 1.92857143;
     color: #fff;
-    opacity: .9;
+    opacity: 0.9;
     text-align: center;
     width: 100%;
     width: 21.92857143em;
@@ -622,13 +622,13 @@
     margin-bottom: 0.66666667em;
     color: #fff;
     font-size: 1em;
-    opacity: .9;
+    opacity: 0.9;
   }
   #footer .right-section .lists ul li a {
     text-decoration: none;
     color: #fff;
     line-height: 1.16666667;
-    transition: color .3s;
+    transition: color 0.3s;
   }
   #footer .right-section .lists ul li a:hover {
     color: var(--primary);
@@ -643,7 +643,7 @@
     position: relative;
   }
   #footer .right-section .lists ul h2:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 0.11111111em;
@@ -735,7 +735,7 @@
     position: relative;
   }
   #footer .right-section .lists ul li a:before {
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     height: 0.11111111em;
@@ -744,7 +744,7 @@
     opacity: 1;
     bottom: -0.16666667em;
     left: 0;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   #footer .right-section .lists ul li a:hover:before {
     width: 100%;
