<update> img 11-15 added to gallery

--- a/css/projects.less
+++ b/css/projects.less
@@ -84,6 +84,37 @@
             }
           }
         }
+        &:nth-of-type(4) {
+          picture {
+            &:nth-of-type(1) {
+              width: 420/16em;
+              height: 492/16em;
+            }
+
+            &:nth-of-type(2) {
+              width: 420/16em;
+              height: 517/16em;
+            }
+
+            &:nth-of-type(3) {
+              width: 420/16em;
+              height: 629/16em;
+            }
+          }
+        }
+        &:nth-of-type(5) {
+          picture {
+            &:nth-of-type(1) {
+              width: 420/16em;
+              height: 625/16em;
+            }
+
+            &:nth-of-type(2) {
+              width: 420/16em;
+              height: 452/16em;
+            }
+          }
+        }
 
         picture {
           position: relative;
