--- a/css/projects.css
+++ b/css/projects.css
@@ -63,6 +63,26 @@
     width: 26.25em;
     height: 39.3125em;
   }
+  #portfolio .container .row:nth-of-type(4) picture:nth-of-type(1) {
+    width: 26.25em;
+    height: 30.75em;
+  }
+  #portfolio .container .row:nth-of-type(4) picture:nth-of-type(2) {
+    width: 26.25em;
+    height: 32.3125em;
+  }
+  #portfolio .container .row:nth-of-type(4) picture:nth-of-type(3) {
+    width: 26.25em;
+    height: 39.3125em;
+  }
+  #portfolio .container .row:nth-of-type(5) picture:nth-of-type(1) {
+    width: 26.25em;
+    height: 39.0625em;
+  }
+  #portfolio .container .row:nth-of-type(5) picture:nth-of-type(2) {
+    width: 26.25em;
+    height: 28.25em;
+  }
   #portfolio .container .row picture {
     position: relative;
     display: block;
