<update> updated all html with privacy policy link.

--- a/css/root.less
+++ b/css/root.less
@@ -846,6 +846,13 @@
         display: block;
         font-size: 16/16em;
       }
+      .privacyLink{
+        color: rgb(238, 232, 232);
+        
+        a{
+          font-size: 0.25rem;
+        }
+      }
     }
   }
 }
@@ -936,6 +943,10 @@
     .credit {
       .copyright {
         display: inline-block;
+      }
+      .privacyLink{
+        display: block;
+        width:100%;
       }
     }
   }
